# qosst-bob

./: .gitignore  pyproject.toml
docs/source/cli/: documentation.md  understanding.md
post_processing/: alice_post_process.py  bob_post_process.py  heterodyne_keyrate.py  homodyne_keyrate.py  keyrate.py  plot.py  post_process.py  utils.py
post_processing/optimization/: cutoff.py  gain.py
post_processing/test/: test_alice_pp.py  test_bob_pp.py  test_pp.py  test_utils.py
qosst_bob/: __init__.py  bob.py  excess_noise.py
qosst_bob/dsp/: dsp.py  offline_dsp.py  pilots.py  resample.py  synchro.py
qosst_bob/gui/: bobgui.py
qosst_bob/parameters_estimation/: base.py
qosst_bob/phase_recovery/: __init__.py  acq.py  dsp_test.py  laser_simulation.py  simulation.py  test_data.py  ukf.py  utils.py
qosst_bob/phase_recovery/plot/: best
qosst_bob/phase_recovery/test/: after_dsp_basic_correction.npz  result_basic.npz
qosst_bob/synchronization/: analysis.py  merge_data.py  split_syncho.py  utils.py
