[tool.poetry]
name = "qosst-bob"
version = "0.10.4"
description = "Bob submodule of QOSST, containing modules for Bob client, the GUI, the DSP of Bob and parameters estimation."
authors = [
    "Yoann Piétri <Yoann.Pietri@lip6.fr>",
    "Valentina Marulanda Acosta <Valentina.Marulanda-Acosta@lip6.fr>",
    "Ilektra Karakosta-Amarantidou <ilektra.karakostaamarantidou@studenti.unipd.it>",
    "Matteo Schiavon <Matteo.Schiavon@lip6.fr>",
]
exclude = ["qosst_bob/*.npy", "qosst_bob/export/*.npy"]
include = ["qosst_bob/gui/logo.png"]
packages = [{ include = "qosst_bob" }, { include = "qosst_bob/py.typed" }]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/qosst"
repository = "https://github.com/qosst/qosst-bob"
documentation = "https://qosst-bob.readthedocs.io/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Security :: Cryptography",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
#qosst-core = "^0.10.0"
qosst-core = { git = "https://github.com/matteoschiav/qosst-core", branch = "synchro" }
#qosst-hal = "^0.10.0"
qosst-hal = { git = "https://github.com/qosst/qosst-hal", branch = "dev" }
#qosst-skr = "^0.10.0"
qosst-skr = { git = "https://github.com/matteoschiav/qosst-skr", branch = "synchro" }
matplotlib = [
    { version = "^3.5.1", python = ">=3.9, <3.11" },
    { version = "^3.7.1", python = ">=3.11, <3.14" },
]
scipy = [
    { version = "^1.13.0", python = ">=3.9, <3.10" },
    { version = "^1.15.0", python = ">=3.10, <3.14" },
]
freesimplegui = "^5.1.0"

[tool.poetry.group.dev.dependencies]
myst-parser = [
    { version = "^1.0.0", python = ">=3.9, <3.10" },
    { version = "^4.0.0", python = ">=3.10, <3.14" },
]
sphinx-prompt = "^1.5.0"
sphinx-argparse-cli = "^1.11.0"
setuptools = "^67.6.1"
docstr-coverage = "^2.2.0"
sphinx-rtd-theme = [
    { version = "^1.0.0", python = ">=3.9, <3.10" },
    { version = "^3.0.0", python = ">=3.10, <3.14" },
]
Sphinx = [
    { version = "^5.0.0", python = ">=3.9, <3.10" },
    { version = "^8.1.0", python = ">=3.10, <3.14" },
]
pylint = "^3.3.0"
mypy = "^1.3.0"
sphinxcontrib-programoutput = "^0.17"
ipykernel = "^6.26.0"
black = "^23.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
qosst-bob-gui = "qosst_bob.gui.bobgui:main"
qosst-bob-excess-noise = "qosst_bob.excess_noise:main"
qosst-bob-optimize = "qosst_bob.optimization.commands:main"
qosst-bob-transmittance = "qosst_bob.transmittance:main"
qosst-bob-tools = "qosst_bob.tools.commands:main"
qosst-bob-offline-dsp = "qosst_bob.dsp.offline_dsp:main"
qosst-bob-synchronization-analysis = "qosst_bob.synchronization.analysis:main"
qosst-bob-synchronization-merge = "qosst_bob.synchronization.merge_data:main"
qosst-bob-ukf = "qosst_bob.phase_recovery.test_data:main"